@@ -11,6 +11,7 @@ Full release notes:
 v8.0.31
 =======
 
+- BUG#34283402: Binary data starting with 0x00 are returned as empty string
 - BUG#28491115: Connector/Python crashes on 0 time value
 
 v8.0.30
